# python-onshape-exporter

./: README.md  pyproject.toml
src/python_onshape_exporter/: client.py  schemas.py
tests/: test_python_onshape_exporter.py
