[tool.poetry]
name = "python_onshape_exporter"
version = "0.1.0"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
pydantic = "^1.8.2"
cryptography = "^36.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.16.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
